--- a/fe/my-app/src/index.scss
+++ b/fe/my-app/src/index.scss
@@ -1,3 +1,7 @@
+@import "~uikit/dist/css/uikit.min.css";
+@import "~uikit/dist/css/uikit-core.min.css";
+@import "assets/uikit.scss";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
