--- a/fe/my-app/src/assets/utilities.scss
+++ b/fe/my-app/src/assets/utilities.scss
@@ -1,3 +1,11 @@
 .border-radius-50{
   border-radius: 50% !important;
 }
+
+.max-height{
+  height: 100% !important;
+}
+
+.max-width{
+  width: 100% !important;
+}
