--- a/fe/my-app/src/features/chat/chat-preview-card.scss
+++ b/fe/my-app/src/features/chat/chat-preview-card.scss
@@ -5,9 +5,9 @@
   padding-bottom: 1.45rem !important;
 
   &:hover{
-    border-radius: .3rem;
-    background: rgba(gray, .1);
-    padding-left: 1.45rem;
+    //border-radius: .3rem;
+    //background: rgba(gray, .1);
+    padding-left: .45rem;
 
     cursor: pointer;
   }
