--- a/fe/src/layout/navigation/logo.scss
+++ b/fe/src/layout/navigation/logo.scss
@@ -1,6 +1,9 @@
 .navigation{
   display: flex;
   align-items: center;
+  border-bottom: 1px solid rgba(0,0,0,.06);
+  background: hsla(0,0%,100%,.95);
+  height: 3.59595959vh;
 
   .logo{
     width: 50px;
