--- a/fe/src/index.scss
+++ b/fe/src/index.scss
@@ -16,3 +16,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body{
+  min-height: 100vh;
+}
