--- a/fe/src/common/components/ItemsFrameL/items-frame-l.scss
+++ b/fe/src/common/components/ItemsFrameL/items-frame-l.scss
@@ -1,13 +1,28 @@
 .items-frame-l{
+  .frame-item{
+    max-width: 7rem;
+    margin: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .avatar{
+    width: 5rem;
+    height: 5rem;
+  }
+
   .uk-card-header{
     padding: 0 0 8px 0;
     font-weight: 500;
   }
 
   .items-wrapper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    //display: flex;
+    //align-items: center;
+    //justify-content: center;
     opacity: 0.9;
+    display: grid;
+    grid-template-columns: repeat(4, 7rem);
   }
 }
