--- a/fe/src/layout/navigation/navigation.scss
+++ b/fe/src/layout/navigation/navigation.scss
@@ -3,7 +3,7 @@
   align-items: center;
   border-bottom: 1px solid rgba(0,0,0,.06);
   background: hsla(0,0%,100%,.95);
-  height: 3.59595959vh;
+  height: 3.59595959rem;
 
   .logo{
     width: 50px;
