--- a/fe/src/common/components/SimpleDropdown/simple-dropdown.scss
+++ b/fe/src/common/components/SimpleDropdown/simple-dropdown.scss
@@ -1,3 +1,8 @@
 .simple-dropdown{
-
+  /*&__btn {
+    background-color: rgb(255, 255, 255);
+    border-radius: 16px;
+    border: 1px solid rgb(204, 204, 204);
+    color: rgb(26, 26, 26);
+  }*/
 }
