--- a/fe/src/features/group/components/GroupParticipantsInFrame/group-participants-in-frame.scss
+++ b/fe/src/features/group/components/GroupParticipantsInFrame/group-participants-in-frame.scss
@@ -15,7 +15,7 @@
 
   &__items{
     opacity: 0.9;
-    display: grid;
-    grid-template-columns: repeat(4, 7rem);
+    display: flex;
+    flex-wrap: wrap;
   }
 }
