--- a/fe/src/pages/group-settings/group-settings-page.scss
+++ b/fe/src/pages/group-settings/group-settings-page.scss
@@ -1,6 +1,7 @@
 .group-settings-page{
   &__get-back-btn{
     display: flex;
+    color: black;
     align-items: center;
     justify-content: center;
     background: linear-gradient(180deg, rgba(2,0,36,.15) 0%, rgba(113,113,113,.15) 0%, rgba(210,210,210,.15) 100%);
