--- a/fe/src/pages/group/subpages/group-events-subpage/group-events-subpage.scss
+++ b/fe/src/pages/group/subpages/group-events-subpage/group-events-subpage.scss
@@ -1,7 +1,10 @@
 .group-events-subpage {
   &__events-list{
-    display: grid;
-    grid-template-columns: repeat(3, 33%);
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+
+    & > * {
+      margin-top: 1rem;
+    }
   }
 }
