--- a/fe/src/features/group/components/GroupEventCard/group-event-card.scss
+++ b/fe/src/features/group/components/GroupEventCard/group-event-card.scss
@@ -1,6 +1,7 @@
 .group-event-card {
   z-index: 1;
   overflow: hidden;
+  display: flex;
   //min-width: 28rem;
 
   .avatar-bg{
@@ -19,9 +20,9 @@
 
   .avatar-wrap{
     margin-bottom: 3rem;
-    height: 100%;
-    width: 35%;
-    max-width: 7.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     .avatar-img{
       border-radius: 50%;
@@ -39,9 +40,8 @@
   }
 
   .event-info-wrapper{
-    width: 65%;
-    height: 100%;
-    background: white;
+    background: rgba(white, .9);
+    width: 80%;
 
     .group-add-info{
       display: block;
