--- a/fe/src/pages/group/subpages/group-participants-subpage/group-participants-subpage.scss
+++ b/fe/src/pages/group/subpages/group-participants-subpage/group-participants-subpage.scss
@@ -1,7 +1,10 @@
 .group-participants-subpage {
   &__list{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+
+    & > * {
+      margin-top: 1rem;
+    }
   }
 }
